# bikesensor

./: .gitignore  GEMINI.md  README.md  generate_demo.py  main.py  presentation.html  pyproject.toml
firmware/: platformio.ini
firmware/bikesensor/: bikesensor.ino
firmware/diagnostic/: diagnostic.ino
raw_data/: text.txt
src/: analysis.py  dashboard.py  db.py  lightblue_parse.py  merge.py  server.py
stl_files/: box-3.stl
tests/: test_analysis.py  test_lightblue_parse.py  test_merge.py  test_server.py
