[project]
name = "bikesensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "folium>=0.20.0",
    "gpxpy>=1.6.2",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pydeck>=0.9.2",
    "scipy>=1.17.1",
    "streamlit>=1.57.0",
    "streamlit-folium>=0.27.2",
    "uvicorn>=0.46.0",
    "paramiko>=3.4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
